bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: '(' expected but identifier found.
  if lettre=="R"{
     ^BDR:13: error: illegal start of simple expression
} 
^